modernize DurationScanner patterns, replace `TimingInfo` class with a Java `record` to reduce boilerplate, use arrow-syntax `switch` expressions (supported in Java 17) in `scanBuffer` for improved readability, replace manual conditional assignments (`t > time ? t : time`) with `Math.max()` for cleaner logic, switch to `URI.create(args[0]).toURL()` in `main` for modern URL handling